# locust

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  locust.example.toml
.claude/: project.json
.gemini/: project.json
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  nightly.yml  release.yml
benches/: fuzzy_matching.rs  plugin_performance.rs  target_spatial_queries.rs
docs/: API_PATTERNS.md  ARCHITECTURE.md  CASE_STUDIES.md  CONFIGURATION.md  EXAMPLES.md  INTEGRATION_GUIDE.md  KEYBINDINGS.md  MIGRATION_CHECKLIST.md  PHASE-1-GATE-CHECK.md  PHASE-3-SUMMARY.md  PLUGINS.md  PLUGIN_DEVELOPMENT_GUIDE.md  PROJECT-COMPLETE.md  ROADMAP.md  SESSION-SUMMARY.md  SUMMARY-WS08.md  TESTING.md  THEMING.md  TROUBLESHOOTING.md  WIDGET_ADAPTERS.md  WS-04-COMPLETION-REPORT.md  WS-05-COMPLETION-SUMMARY.md  WS-08-Tooltip-Plugin.md  WS-10-SUMMARY.md  WS-12-INTEGRATION-PATTERNS-SUMMARY.md  WS-13-SUMMARY.md  WS-14-COMPLETION-SUMMARY.md  WS03_COMPLETION_REPORT.md  WS03_SUMMARY.md  WS15_COMPLETION_SUMMARY.md  ws02-completion-report.md
docs/diagrams/: architecture.mmd  plugins.mmd
docs/orchestration/: meta-orchestrator.md  project-summary.md  (+1 more)
examples/: basic_nav.rs  config_demo.rs  custom_keybindings.rs  dashboard.rs  database_tool.rs  file_browser.rs  git_browser.rs  log_viewer.rs  omnibar_demo.rs  system_monitor.rs  terminal_multiplexer.rs  theme_switcher.rs  tooltip_demo.rs  tour_demo.rs  widget_navigation.rs
keymaps/: default.toml
src/: lib.rs  prelude.rs
tests/: mod.rs
themes/: dark.toml  light.toml  nord.toml  solarized-dark.toml
(+76 files in other folders)
