[package]
name = "locust"
version = "0.1.0"
edition = "2021"
description = "Locust: overlay utilities and Vimium-style navigation for ratatui"
license = "MIT"
repository = "https://github.com/raibid-labs/locust"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
log = "0.4.28"
simplelog = "0.12.2"


[dev-dependencies]
anyhow = "1"
criterion = "0.5"
chrono = "0.4"
rand = "0.8"
tempfile = "3"
proptest = "1.4"

[[bench]]
name = "target_spatial_queries"
harness = false

[[bench]]
name = "fuzzy_matching"
harness = false

[[bench]]
name = "plugin_performance"
harness = false
